--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           VERSION=${{ github.event.release.tag_name }}
           OS_NAME=""
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+          if ([ "${{ matrix.os }}" == "windows-latest" ]); then
             OS_NAME="Windows"
           else
             OS_NAME="Linux"
