--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,15 +32,21 @@ jobs:
 
       - name: Build Windows
         if: matrix.os == 'windows-latest'
+        env:
+              GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run dist -- -w
 
       - name: Build Linux
         if: matrix.os == 'ubuntu-latest'
+        env:
+              GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run dist -- -l
 
 
       - name: Rename Windows artifacts
         if: matrix.os == 'windows-latest'
+        env:
+              GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mkdir -p dist
           for f in dist/*; do
@@ -51,6 +57,8 @@ jobs:
 
       - name: Rename Linux artifacts
         if: matrix.os == 'ubuntu-latest'
+        env:
+              GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           VERSION=${{ github.event.release.tag_name }}
           mkdir -p dist
