--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "myproject-electron",
-  "version": "1.0.1",
+  "name": "truck-queue",
+  "version": "1.1.0",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -8,7 +8,7 @@
   },
   "build": {
     "appId": "com.mycompany.myapp",
-    "productName": "TruckQueue",
+    "productName": "Truck-Queue-App",
     "files": [
       "main.js",
       "package.json",
